<resources>
    <string name="app_name">Biblioteca Nazionale</string>
    <string name="create_new_password">Crea una nuova password</string>
    <string name="description_new_password">Inserisci la nuova password e dopo confermala per resettarla</string>
    <string name="reset_password">Reset password</string>
    <string name="new_password">New password</string>
    <string name="conferm_new_password">Confirm password</string>
    <string name="password_changed">Password updated</string>
    <string name="message_password_changed">Password updated successfully!</string>
    <string name="back_to_login">Back to login page</string>
    <string name="book_description">Description</string>
    <string name="rating_bar_description">Inserisci un indice di gradimento</string>
    <string name="password">Password</string>
    <string name="password_confirmation">Confirm password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="already_registered">Already have an account?</string>
    <string name="login_now">Login now</string>
    <string name="register_with">Or register with</string>
    <string name="login_with">Or login with</string>
    <string name="email">Email</string>
    <string name="Hello_reg_to_star">Hello! Register to get started</string>
    <string name="not_yet_registered">Not yet registered?</string>
    <string name="reg_now">Register now</string>
    <string name="home">Home</string>
    <string name="books">Books</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="my_books">My books</string>
    <string name="back_to_home">Back to Home</string>
    <string name="update">Update</string>
    <string name="email_visualize">Email to visualize</string>
    <string name="profile_updated">Profile Updated!</string>
    <string name="profile_succesfully_updated">Your profile has been updated successfully!</string>
    <string name="back_to_profile">Back to profile</string>
    <string name="write_review">Write a review</string>
    <string name="reviews">Reviews</string>
    <string name="logout">Logout</string>
    <string name="delete">Delete account</string>
    <string name="expi_date">Expiration date:</string>
    <string name="id">Id:</string>
    <string name="book_title">Book title</string>
    <string name="date">To be returned by:</string>
    <string name="delete_booking">Delete booking</string>
    <string name="read_more">Read more</string>
    <string name="read_less">Read less</string>
    <string name="book_loan">Request book</string>
    <string name="vote">Vote</string>
    <string name="review_title">Review title</string>
    <string name="review">Review</string>
    <string name="write_text">Write your text…</string>
    <string name="your_review">Your review from:</string>
    <string name="change_review">Change your review</string>
    <string name="my_reviews">My reviews</string>
    <string name="your_vote">Your vote:</string>
    <string name="change_my_review">Change review</string>
    <string name="notification_access_required">Notification access required</string>
    <string name="ok_notification">Notification already set</string>
    <string name="delete_your_review">Delete your review</string>
    <string name="notification_permission_granted">Notification permission granted</string>
    <string name="notification_permission_denied">Notification permission denied</string>
    <string name="not_modify">You cannot change your Google\ncredentials, contact your provider</string>
    <string name="modify_profile">Modify your profile</string>

    <string name="no_notifications_found">No notifications found</string>
    <string name="no_books_found">No books found</string>
    <string name="no_reviews_found">No reviews found</string>

    <string name="search">Search</string>








    <string name="notifications_image">Notifications image</string>







    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirm">conferma</string>
    <string name="welcome_string">Welcome to the app of\nBiblioteca nazionale</string>
    <string name="description">Description</string>
    <string name="valutation_details">valutation details</string>
    <string name="my_likes">My likes</string>
    <string name="no_likes_found">No likes found</string>
    <string name="likes">Likes</string>

</resources>