<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome_background"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/loginButtonWelcPage"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/primary_color"
        android:text="@string/login"
        android:textSize="18sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="@+id/loginButtonWelcPage2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/loginButtonWelcPage2"
        app:layout_constraintTop_toBottomOf="@+id/name_app" />

    <Button
        android:id="@+id/loginButtonWelcPage2"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/primary_color"
        android:text="@string/register"
        android:textSize="18sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButtonWelcPage" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/logoWelcome"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginTop="340dp"
        app:layout_constraintBottom_toTopOf="@+id/name_app"
        app:layout_constraintEnd_toEndOf="@+id/name_app"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/name_app"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        android:background="@drawable/round_background">


        <ImageView
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:background="@drawable/round_background"
            android:contentDescription="@string/notifications_image"
            android:scaleType="centerCrop"
            android:src="@drawable/round_menu_book_48"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/name_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/app_name"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/loginButtonWelcPage"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/loginButtonWelcPage"
        app:layout_constraintTop_toBottomOf="@+id/logoWelcome" />

</androidx.constraintlayout.widget.ConstraintLayout>