<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/arrowIcon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="14dp"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewCreatePassword"
        android:layout_width="370dp"
        android:layout_height="78dp"
        android:layout_marginTop="10dp"
        android:text="@string/create_new_password"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arrowIcon" />

    <EditText
        android:id="@+id/usernameTextViewInsert"
        android:layout_width="370dp"
        android:layout_height="60dp"
        android:layout_marginTop="168dp"
        android:background="@drawable/custom_edittext"
        android:backgroundTint="@color/grey"
        android:drawablePadding="8dp"
        android:hint="@string/new_password"
        android:padding="8dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCreatePassword" />

    <EditText
        android:id="@+id/emailTextViewInsert"
        android:layout_width="370dp"
        android:layout_height="60dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/custom_edittext"
        android:backgroundTint="@color/grey"
        android:drawablePadding="8dp"
        android:hint="@string/conferm_new_password"
        android:padding="8dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameTextViewInsert" />

    <Button
        android:id="@+id/regButtonLayReg"
        android:layout_width="370dp"
        android:layout_height="60dp"
        android:layout_marginTop="76dp"
        android:backgroundTint="@color/primary_color"
        android:text="@string/reset_password"
        android:textSize="18sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTextViewInsert" />

    <TextView
        android:id="@+id/textViewDescriptionPassword"
        android:layout_width="370dp"
        android:layout_height="61dp"
        android:layout_marginTop="36dp"
        android:text="@string/create_new_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCreatePassword" />


</androidx.constraintlayout.widget.ConstraintLayout>